data/derived/comb/progs/unify/prog2553.ml.out
Characters 45-49:
  List.map (sepConcat ("; " l));;
                       ^^^^
Error: This expression has type string
       This is not a function; it cannot be applied.
